RESOLVED FIXED81767
The activation highlight does not always hide
https://bugs.webkit.org/show_bug.cgi?id=81767
Summary The activation highlight does not always hide
Kenneth Rohde Christiansen
Reported 2012-03-21 05:30:30 PDT
SSIA
Attachments
Patch (1.97 KB, patch)
2012-03-21 05:32 PDT, Kenneth Rohde Christiansen
no flags
Kenneth Rohde Christiansen
Comment 1 2012-03-21 05:32:18 PDT
WebKit Review Bot
Comment 2 2012-03-21 06:23:38 PDT
Comment on attachment 133022 [details] Patch Clearing flags on attachment: 133022 Committed r111530: <http://trac.webkit.org/changeset/111530>
WebKit Review Bot
Comment 3 2012-03-21 06:23:42 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.