The activation highlight does not always hide https://bugs.webkit.org/show_bug.cgi?id=81767

Reviewed by Simon Hausmann.

The zero point used for hiding potential activations should
not be transformed.

* UIProcess/qt/QtWebPageEventHandler.cpp:
(QtWebPageEventHandler::handlePotentialSingleTapEvent):


Canonical link: https://commits.webkit.org/99033@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@111530 268f45cc-cd09-0410-ab3c-d52691b4dbfc